cpp/test/FreezeScript/dbmap/fail/03_old.ice
module Test
{

enum E { E1, E2, E3 };

struct S1
{
    float m1;
    long m2;
    string m3;
    E m4;
};

sequence<short> Seq1;
dictionary<string, short> D1;

interface I {};

class C1 implements I
{
    short c1m1;
    short c1m2;
    short c1m3;
    short c1m4;
    short c1m5;
    short c1m6;
    short c1m7;
    short c1m8;
    short c1m9;
    short c1m10;
    short c1m11;
    short c1m12;
    short c1m13;
    short c1m14;
    short c1m15;
    short c1m16;
};

class C2 extends C1
{
    short c2m1;
    short c2m2;
    short c2m3;
    short c2m4;
    short c2m5;
    short c2m6;
    short c2m7;
    short c2m8;
    short c2m9;
    short c2m10;
    short c2m11;
    short c2m12;
    short c2m13;
    short c2m14;
    short c2m15;
    short c2m16;
};

struct S2
{
    short m1;
    short m2;
    short m3;
    short m4;
    short m5;
    short m6;
    short m7;
    short m8;
    short m9;
    short m10;
    short m11;
    short m12;
    short m13;
    short m14;
    short m15;
    short m16;
};

};
